--- a/BleSensorTag/src/main/res/menu/main_activity_actions.xml
+++ b/BleSensorTag/src/main/res/menu/main_activity_actions.xml
@@ -13,15 +13,15 @@
         android:icon="@drawable/ic_action_bluetooth"
         android:title="@string/bt" 
         />
-    <item
-        android:id="@+id/opt_e2e"
-        android:title="@string/tie2e"/>
-    <item
-        android:id="@+id/opt_sthome"
-        android:title="@string/sthome"/>
-    <item
-        android:id="@+id/opt_license"
-        android:title="@string/license"/>
+    <!--<item-->
+        <!--android:id="@+id/opt_e2e"-->
+        <!--android:title="@string/tie2e"/>-->
+    <!--<item-->
+        <!--android:id="@+id/opt_sthome"-->
+        <!--android:title="@string/sthome"/>-->
+    <!--<item-->
+        <!--android:id="@+id/opt_license"-->
+        <!--android:title="@string/license"/>-->
     <item
         android:id="@+id/opt_about"
         android:icon="@drawable/ic_action_about"
